# gemini-live-ppt

./: .dockerignore  .env.example  .gitignore  Dockerfile  PIPECAT_APPLY_PLAN.md  README.md  index.html  package-lock.json  package.json  presentation-content.ts  server.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json
client/: CODE_REVIEW.md  README.md  env.example  package-lock.json  package.json
client/app/: ClientApp.tsx  EventStreamPanel.tsx  beforest.ts  constants.ts  globals.css  layout.tsx  narrationCaptionCues.ts  page.tsx  presentationAgenda.test.ts  presentationAgenda.ts  presentationScript.test.ts  presentationScript.ts
client/lib/: beforest-runtime.ts  beforest-shared.ts  gemini-live-utils.test.ts  gemini-live-utils.ts  invites.ts  server-env.ts  supabase-rest.ts
client/scripts/: generate-caption-cues.ts  generate-faq-audio.ts  generate-invites.ts  generate-narration.ts
deck/: 10-percent.md  README.md  beforest.md  flow.md  materials.md
deploy/: start-app.sh
docs/: APP_TEST_CHECKLIST.md  BEFA-14_PLAN.md  Beforest_App_Test_Checklist.rtf  DEEP_AUDIT_2026-04-26.md  IMPLEMENTATION_CONCEPT.md  RESEARCH_PLAN.md  UX_AUDIT_2026-04-26.md  supabase-analytics.sql  supabase-invites-migration.sql
public/: BRAND-AND-AGENT-RULES.md  PPT-AUDIO-TRANSCRIPT.md  PRESENTATION-HIERARCHY.md
server/: README.md  agent.py  beforest_runtime.py  bot.py  env.example  pyproject.toml
server/content/images/: images.json
server/content/knowledge/: brand.md  cta.md  design.md  flow.md  product.md  transcript.md
src/: App.tsx  audio.ts  index.css
(+19 files in other folders)
