[project]
name = "gemini-screen-ui-kit"
version = "0.1.0"
description = "Beforest LiveKit Gemini Live agent"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[google,silero]~=1.5",
    "livekit-plugins-ai-coustics~=0.2",
    "python-dotenv"
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
